prac/prac6_viot_2025/10_container_probe.yml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-example
spec:
  containers:
  - name: web
    image: nginx
    livenessProbe:
      httpGet:
        path: /health
        port: 80
      initialDelaySeconds: 15  # Ждать 15 секунд перед первой проверкой
      periodSeconds: 10        # Проверять каждые 10 секунд
      timeoutSeconds: 2        # Таймаут запроса — 2 секунды
      failureThreshold: 3      # 3 неудачных попытки → контейнер неживой
---
apiVersion: v1
kind: Pod
metadata:
  name: readiness-example
spec:
  containers:
  - name: mysql
    image: mysql
    readinessProbe:
      tcpSocket:
        port: 3306
      initialDelaySeconds: 5
      periodSeconds: 5
      successThreshold: 1
      failureThreshold: 3
---
apiVersion: v1
kind: Pod
metadata:
  name: startup-example
spec:
  containers:
  - name: legacy-app
    image: my-legacy-app
    startupProbe:
      exec:
        command: ["cat", "/app/initialized"]
      failureThreshold: 30  # 30 попыток
      periodSeconds: 5       # Интервал между попытками — 5 сек
